feat(label): 라벨 변경 이력을 저장 이벤트 단위 diff로 재설계 + 저장 full-replace 전환
라벨 저장 이력을 '라벨 1건=1행'에서 '저장 클릭 1회=1이벤트, 직전 저장 대비
추가/수정/삭제 + 이전값→새값 diff'로 재정의. 저장을 프레임 전체 교체로 바꿔
요청에 빠진 라벨을 실제 삭제하고 DELETED로 기록. 무변경 저장은 이력 미생성.

Changes:
- V114 마이그레이션: LS_DATA_LBL_HSTRY 재구조화(LBL_SN/CHG_KIND_CD 제거 → ADD_CNT/MDFCN_CNT/DEL_CNT/CHG_DTL_CN)
- LsDataLblHstry/LabelChange/LabelSnapshot/LabelHistoryDiffSerializer: 저장이벤트 diff 모델
- LabelService.bulkUpsert: full-replace 삭제 + before→after diff + 무변경 가드(pointCn 정규화 비교)
- TrackEditService/DeidentReportService: 삭제 이력 저장이벤트 모델 이관
- LabelHistoryResponse/LabelController: 이벤트+diff 응답 + Swagger 갱신
- FE: LabelHistoryPanel 이벤트 카드 + LabelChangeDetail 펼침 diff, api.ts 신 스키마 정합
- 문서: v2-wiki(18-database/04-screens-ia) + D8/D9(design·design-full) 동기화

Generated with Claude Code